@@ -36,7 +36,7 @@
 #define A4_WIDTH_STR "210mm"
 #define A4_HEIGHT_STR "297mm"
 
-#define SP_DOCUMENT_UPDATE_PRIORITY GTK_PRIORITY_REDRAW
+#define SP_DOCUMENT_UPDATE_PRIORITY (GTK_PRIORITY_REDRAW + 1)
 
 enum {
 	MODIFIED,
