@@ -1,13 +1,23 @@
-#ifndef SP_ZOOM_CONTEXT_H
-#define SP_ZOOM_CONTEXT_H
+#ifndef __SP_ZOOM_CONTEXT_H__
+#define __SP_ZOOM_CONTEXT_H__
+
+/*
+ * Handy zooming tool
+ *
+ * Authors:
+ *   Lauris Kaplinski <lauris@kaplinski.com>
+ *   Frank Felfe <innerspace@iname.com>
+ *
+ * Copyright (C) 1999-2002 Authors
+ *
+ * Released under GNU GPL, read the file 'COPYING' for more information
+ */
 
 #include "event-context.h"
 
-#define SP_TYPE_ZOOM_CONTEXT            (sp_zoom_context_get_type ())
-#define SP_ZOOM_CONTEXT(obj)            (GTK_CHECK_CAST ((obj), SP_TYPE_ZOOM_CONTEXT, SPZoomContext))
-#define SP_ZOOM_CONTEXT_CLASS(klass)    (GTK_CHECK_CLASS_CAST ((klass), SP_TYPE_ZOOM_CONTEXT, SPZoomContextClass))
-#define SP_IS_ZOOM_CONTEXT(obj)         (GTK_CHECK_TYPE ((obj), SP_TYPE_ZOOM_CONTEXT))
-#define SP_IS_ZOOM_CONTEXT_CLASS(klass) (GTK_CHECK_CLASS_TYPE ((klass), SP_TYPE_ZOOM_CONTEXT))
+#define SP_TYPE_ZOOM_CONTEXT (sp_zoom_context_get_type ())
+#define SP_ZOOM_CONTEXT(obj) (GTK_CHECK_CAST ((obj), SP_TYPE_ZOOM_CONTEXT, SPZoomContext))
+#define SP_IS_ZOOM_CONTEXT(obj) (GTK_CHECK_TYPE ((obj), SP_TYPE_ZOOM_CONTEXT))
 
 typedef struct _SPZoomContext SPZoomContext;
 typedef struct _SPZoomContextClass SPZoomContextClass;
@@ -20,17 +30,17 @@ struct _SPZoomContextClass {
 	SPEventContextClass parent_class;
 };
 
-/* Standard Gtk function */
+unsigned int sp_zoom_context_get_type (void);
 
-GtkType sp_zoom_context_get_type (void);
+/* UI handlers */
 
-void sp_zoom_selection (GtkWidget * widget);
-void sp_zoom_drawing (GtkWidget * widget);
-void sp_zoom_page (GtkWidget * widget);
-void sp_zoom_1_to_2 (GtkWidget * widget);
-void sp_zoom_1_to_1 (GtkWidget * widget);
-void sp_zoom_2_to_1 (GtkWidget * widget);
-void sp_zoom_in (GtkWidget * widget);
-void sp_zoom_out (GtkWidget * widget);
+void sp_zoom_selection (gpointer object, gpointer data);
+void sp_zoom_drawing (gpointer object, gpointer data);
+void sp_zoom_page (gpointer object, gpointer data);
+void sp_zoom_1_to_2 (gpointer object, gpointer data);
+void sp_zoom_1_to_1 (gpointer object, gpointer data);
+void sp_zoom_2_to_1 (gpointer object, gpointer data);
+void sp_zoom_in (gpointer object, gpointer data);
+void sp_zoom_out (gpointer object, gpointer data);
 
 #endif
